...
    
    override func viewDidLoad() {
        self.title = "Home ViewController"
        super.viewDidLoad()
        initTimer()
        readSqlData()
        createRightItem(title: "History")
        createActivityIndicatorView()
    }
}

// MARK: -Action
extension ViewController {
...
        self.view.addSubview(activityview)
        activityview.center = self.view.center
    }
  
    func showErrorView()  {
        let view = UIAlertController.init(title: "", message: "can not get api data, please try later", preferredStyle: .alert)
        view.addAction(UIAlertAction.init(title: "ok", style: UIAlertAction.Style.default, handler: { (action) in
        }))
        self.present(view, animated: true, completion: nil)
    }
}

